@@ -12,6 +12,8 @@
 	* ability to adjust environment of debugged process
 	* Rubyish renaming RubyVariable.isStatic() to isClass()
 	* log and provide more info within the exception when debugger start fails
+	* Get rid of non-sense RubyVariableInfo.UNKNOWN_IN_CONTEXT. Log(severe)
+	  processing exception instead. To be tuned.
 
 0.7.1 - 0.7.2
 -------------
